--- a/.github/workflows/source.yml
+++ b/.github/workflows/source.yml
@@ -11,6 +11,7 @@ on: [push, pull_request]
 jobs:
   style:
 
+    if: "!contains(github.event.head_commit.message, 'skip ci')"
     runs-on: ubuntu-latest
 
     steps:
